--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,11 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
   uuid: ^4.5.1
-  firebase_core: ^2.12.0
-  firebase_storage: ^11.0.16
   awesome_bottom_bar: ^1.2.4
   transparent_image: ^2.0.1
+  curved_navigation_bar: ^1.0.6
+  cloud_firestore: ^4.17.5
+  firebase_core: ^2.32.0
 
 dev_dependencies:
   flutter_test:
