--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   cloud_firestore: ^4.17.5
   firebase_core: ^2.32.0
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
