--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^4.17.5
   firebase_core: ^2.32.0
   carousel_slider: ^5.0.0
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
