--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   firebase_core: ^2.32.0
   carousel_slider: ^5.0.0
   flutter_riverpod: ^2.6.1
+  firebase_auth: ^4.16.0
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
