--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,13 @@ dependencies:
   awesome_bottom_bar: ^1.2.4
   transparent_image: ^2.0.1
   curved_navigation_bar: ^1.0.6
-  cloud_firestore: ^4.17.5
-  firebase_core: ^2.32.0
+  cloud_firestore: ^5.6.2
+  firebase_core: ^3.10.1
   carousel_slider: ^5.0.0
-  flutter_riverpod: ^2.6.1
-  firebase_auth: ^4.16.0
+  firebase_auth: ^5.4.1
   google_sign_in: ^6.2.2
+  provider: ^6.1.2
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
