--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   google_sign_in: ^6.2.2
   provider: ^6.1.2
   gap: ^3.0.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
