--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   provider: ^6.1.2
   gap: ^3.0.1
   cached_network_image: ^3.4.1
+  firebase_core_web: ^2.20.0
+  skeletonizer: ^1.4.3
 
 dev_dependencies:
   flutter_test:
