--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   cached_network_image: ^3.4.1
   firebase_core_web: ^2.20.0
   skeletonizer: ^1.4.3
+  flutter_animate: ^4.5.2
+  loading_animation_widget: ^1.3.0
 
 dev_dependencies:
   flutter_test:
