--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.7.0
   google_fonts: ^6.2.1
-  flutter_svg: ^2.0.10+1
   uuid: ^4.5.1
   awesome_bottom_bar: ^1.2.4
   transparent_image: ^2.0.1
@@ -54,6 +53,8 @@ dependencies:
   skeletonizer: ^1.4.3
   flutter_animate: ^4.5.2
   loading_animation_widget: ^1.3.0
+  dio: ^5.8.0+1
+  flutter_inappwebview: ^6.1.5
 
 dev_dependencies:
   flutter_test:
