--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   loading_animation_widget: ^1.3.0
   dio: ^5.8.0+1
   flutter_inappwebview: ^6.1.5
+  firebase_remote_config: ^5.4.2
+  firebase_analytics: ^11.4.4
 
 dev_dependencies:
   flutter_test:
