--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,10 @@ dependencies:
   flutter_inappwebview: ^6.1.5
   firebase_remote_config: ^5.4.2
   firebase_analytics: ^11.4.4
-
+  location: ^8.0.0
+  flutter_map: ^8.1.0
+  geolocator: ^13.0.2
+  latlong2: ^0.9.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -82,8 +85,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/
-     - assets/category_image/
+    - assets/
+    - assets/category_image/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
