--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   carousel_slider: ^5.0.0
   firebase_auth: ^5.4.1
   google_sign_in: ^6.2.2
-  provider: ^6.1.2
+  provider: ^6.1.4
   gap: ^3.0.1
   cached_network_image: ^3.4.1
   firebase_core_web: ^2.20.0
@@ -61,6 +61,7 @@ dependencies:
   geolocator: ^13.0.2
   latlong2: ^0.9.1
   geocoding: ^3.0.0
+  http: ^1.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
