--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   latlong2: ^0.9.1
   geocoding: ^3.0.0
   http: ^1.3.0
+  phosphor_flutter: ^2.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
