--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   geocoding: ^3.0.0
   http: ^1.3.0
   phosphor_flutter: ^2.1.0
+  unsplash_client: ^3.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
