--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,14 +49,14 @@ dependencies:
   gap: ^3.0.1
   cached_network_image: ^3.4.1
   firebase_core_web: ^2.20.0
-  skeletonizer: ^1.4.3
+  skeletonizer: ^2.1.0+1
   flutter_animate: ^4.5.2
   loading_animation_widget: ^1.3.0
   dio: ^5.8.0+1
+  location: ^8.0.0
   flutter_inappwebview: ^6.1.5
   firebase_remote_config: ^5.4.2
   firebase_analytics: ^11.4.4
-  location: ^8.0.0
   flutter_map: ^8.1.0
   geolocator: ^13.0.2
   latlong2: ^0.9.1
