--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,47 +28,43 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_bottom_bar: ^1.2.4
+  cached_network_image: ^3.4.1
+  carousel_slider: ^5.0.0
+  cloud_firestore: ^5.6.2
+  cupertino_icons: ^1.0.8
+  curved_navigation_bar: ^1.0.6
+  dartz: ^0.10.1
+  dio: ^5.8.0+1
+  firebase_analytics: ^11.4.4
+  firebase_auth: ^5.4.1
+  firebase_core: ^3.10.1
+  firebase_core_web: ^2.20.0
+  firebase_remote_config: ^5.4.2
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  font_awesome_flutter: ^10.7.0
-  google_fonts: ^6.2.1
-  uuid: ^4.5.1
-  awesome_bottom_bar: ^1.2.4
-  transparent_image: ^2.0.1
-  curved_navigation_bar: ^1.0.6
-  cloud_firestore: ^5.6.2
-  firebase_core: ^3.10.1
-  carousel_slider: ^5.0.0
-  firebase_auth: ^5.4.1
-  google_sign_in: ^6.2.2
-  provider: ^6.1.4
-  gap: ^3.0.1
-  cached_network_image: ^3.4.1
-  firebase_core_web: ^2.20.0
-  skeletonizer: ^2.1.0+1
   flutter_animate: ^4.5.2
-  loading_animation_widget: ^1.3.0
-  dio: ^5.8.0+1
-  location: ^8.0.0
   flutter_inappwebview: ^6.1.5
-  firebase_remote_config: ^5.4.2
-  firebase_analytics: ^11.4.4
   flutter_map: ^8.1.0
-  geolocator: ^13.0.2
-  latlong2: ^0.9.1
+  font_awesome_flutter: ^10.7.0
+  gap: ^3.0.1
   geocoding: ^3.0.0
+  geolocator: ^13.0.2
   go_router: ^16.2.0
+  google_fonts: ^6.2.1
+  google_sign_in: ^6.2.2
   http: ^1.3.0
+  latlong2: ^0.9.1
+  loading_animation_widget: ^1.3.0
+  location: ^8.0.0
   phosphor_flutter: ^2.1.0
-  unsplash_client: ^3.0.0
+  provider: ^6.1.4
   shared_preferences: ^2.5.3
+  skeletonizer: ^2.1.0+1
+  transparent_image: ^2.0.1
+  unsplash_client: ^3.0.0
+  uuid: ^4.5.1
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -76,10 +72,11 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
   # The following line ensures that the Material Icons font is
@@ -93,10 +90,8 @@ flutter:
     - assets/category_image/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
