--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   dartz: ^0.10.1
   dio: ^5.8.0+1
+  equatable: ^2.0.7
   firebase_analytics: ^11.4.4
   firebase_auth: ^5.4.1
   firebase_core: ^3.10.1
@@ -65,12 +66,6 @@ dependencies:
   unsplash_client: ^3.0.0
   uuid: ^4.5.1
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
